# travel-recsys

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: config.yaml
docs/: architecture.md  experiments.md
docs/experiments/: exp-001.md  exp-002.md  exp-003.md  exp-004.md  exp-005.md  exp-006.md  exp-007.md  exp-008.md
plans/: implementation-plan.md
scripts/: embed_items.py  evaluate.py  generate_behavior.py  predict.py  train.py
src/data/: behavior_generator.py  preprocessing.py  schema.py
src/models/: __init__.py  item_towers.py  two_tower.py  user_tower.py
src/serving/: retrieval.py
src/training/: dataset.py  losses.py  trainer.py
