[project]
name = "travel-recsys"
version = "0.1.0"
description = "Two-Tower + MMoE Recommendation System for Thai Tourism"
requires-python = ">=3.10"
dependencies = [
    "tensorflow>=2.15",
    "tensorflow-recommenders>=0.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "google-generativeai>=0.5",
    "faiss-cpu>=1.7",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "matplotlib",
    "seaborn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel",
    "matplotlib",
    "seaborn",
]
